--- a/package.json
+++ b/package.json
@@ -1,52 +1,7 @@
 {
-	"name": "@paranoidphantom/tgauth",
-	"version": "1.2.5",
-	"description": "A simple solution to add telegram login button to your Nuxt app",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/paranoidphantom/tgauth"
-	},
-	"license": "MIT",
-	"type": "module",
-	"exports": {
-		".": {
-			"types": "./dist/types.d.ts",
-			"import": "./dist/module.mjs",
-			"require": "./dist/module.cjs"
-		}
-	},
-	"main": "./dist/module.cjs",
-	"types": "./dist/types.d.ts",
-	"files": [
-		"dist"
-	],
-	"scripts": {
-		"prepack": "nuxt-module-build build",
-		"dev": "nuxi dev playground",
-		"dev:build": "nuxi build playground",
-		"dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-		"release": "bun lint && bun prepack && changelogen --release && npm publish --access public && git push --follow-tags",
-		"lint": "eslint . --fix",
-		"test": "vitest run",
-		"test:watch": "vitest watch",
-		"test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
-	},
-	"dependencies": {
-		"@nuxt/kit": "^3.12.2",
-		"defu": "^6.1.4"
-	},
-	"devDependencies": {
-		"@nuxt/devtools": "^1.3.3",
-		"@nuxt/eslint-config": "^0.3.13",
-		"@nuxt/module-builder": "^0.7.1",
-		"@nuxt/schema": "^3.12.2",
-		"@nuxt/test-utils": "^3.13.1",
-		"@types/node": "^20.14.2",
-		"changelogen": "^0.5.5",
-		"eslint": "^9.5.0",
-		"nuxt": "^3.12.2",
-		"typescript": "latest",
-		"vitest": "^1.6.0",
-		"vue-tsc": "^2.0.21"
-	}
+  "name": "tgauth-demo", 
+  "scripts": {
+    "build": "nuxt build",
+    "generate": "nuxt generate"
+  }
 }
