--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "tgauth-demo", 
+  "name": "tgauth-demo",
+  "type": "module", 
   "scripts": {
     "build": "nuxt build",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "dev": "nuxt dev"
+  },
+  "dependencies": {
+    "nuxt": "^3.0.0"
   }
 }
