--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "tgauth-demo",
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate", 
     "dev": "nuxt dev"
   },
   "dependencies": {
-    "nuxt": "^3.0.0"
+    "nuxt": "^3.8.0",
+    "vue": "^3.3.0"
+  },
+  "devDependencies": {
+    "@nuxt/devtools": "^1.0.0"
   }
 }
